// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Groups Component > renders GroupItem correctly 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 0;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-0.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-0.Mui-selected:hover {
  background-color: rgba(51, 122, 135, 0.12);
}

@media (hover: none) {
  .emotion-0.Mui-selected:hover {
    background-color: rgba(51, 122, 135, 0.08);
  }
}

.emotion-0.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-0.Mui-disabled {
  opacity: 0.38;
}

.emotion-1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.MuiTypography-root:where(.emotion-1 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-1 .MuiListItemText-secondary) {
  display: block;
}

.emotion-2 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
}

<div
  class="MuiButtonBase-root MuiListItemButton-root grouplist MuiListItemButton-gutters Mui-selected MuiListItemButton-root grouplist MuiListItemButton-gutters Mui-selected emotion-0"
  role="button"
  tabindex="0"
>
  <div
    class="MuiListItemText-root emotion-1"
  >
    <span
      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-2"
    >
      test
    </span>
  </div>
</div>
`;

exports[`Groups Component > renders GroupsSubheader correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  line-height: 48px;
  list-style: none;
  color: rgba(0, 0, 0, 0.54);
  font-family: Lato,sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  color: #a9a9a9;
  height: 48px;
}

.emotion-1 {
  background: #fff;
}

.emotion-2 {
  background: #d4e9e7;
}

<li
  class="MuiListSubheader-root heading-lined emotion-0"
>
  <span
    class="emotion-1"
  >
    test
  </span>
  <div
    class="emotion-2"
  />
</li>
`;

exports[`Groups Component > renders correctly 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-width: 0;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1::-moz-focus-inner {
  border-style: none;
}

.emotion-1.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-1 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: transparent;
  }
}

.emotion-1.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-1.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-1.Mui-selected:hover {
  background-color: rgba(51, 122, 135, 0.12);
}

@media (hover: none) {
  .emotion-1.Mui-selected:hover {
    background-color: rgba(51, 122, 135, 0.08);
  }
}

.emotion-1.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-1.Mui-disabled {
  opacity: 0.38;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.MuiTypography-root:where(.emotion-2 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-2 .MuiListItemText-secondary) {
  display: block;
}

.emotion-3 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
}

.emotion-4 {
  box-sizing: border-box;
  line-height: 48px;
  list-style: none;
  color: rgba(0, 0, 0, 0.54);
  font-family: Lato,sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  color: #a9a9a9;
  height: 48px;
}

.emotion-5 {
  background: #fff;
}

.emotion-6 {
  background: #d4e9e7;
}

.emotion-17 {
  min-width: 56px;
  color: rgba(0, 0, 0, 0.54);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.3929rem;
}

.emotion-18 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="flexbox margin-bottom-small margin-top-small"
  >
    <div
      class="muted"
    >
      Groups
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding emotion-0"
  >
    <div
      class="MuiButtonBase-root MuiListItemButton-root grouplist MuiListItemButton-gutters Mui-selected MuiListItemButton-root grouplist MuiListItemButton-gutters Mui-selected emotion-1"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root emotion-2"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
        >
          All devices
        </span>
      </div>
    </div>
    <li
      class="MuiListSubheader-root heading-lined emotion-4"
    >
      <span
        class="emotion-5"
      >
        Dynamic
      </span>
      <div
        class="emotion-6"
      />
    </li>
    <div
      class="MuiButtonBase-root MuiListItemButton-root grouplist MuiListItemButton-gutters MuiListItemButton-root grouplist MuiListItemButton-gutters emotion-1"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root emotion-2"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
        >
          testGroupDynamic
        </span>
      </div>
    </div>
    <li
      class="MuiListSubheader-root heading-lined emotion-4"
    >
      <span
        class="emotion-5"
      >
        Static
      </span>
      <div
        class="emotion-6"
      />
    </li>
    <div
      class="MuiButtonBase-root MuiListItemButton-root grouplist MuiListItemButton-gutters MuiListItemButton-root grouplist MuiListItemButton-gutters emotion-1"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiListItemText-root emotion-2"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
        >
          testGroup
        </span>
      </div>
    </div>
    <div
      class="MuiButtonBase-root MuiListItemButton-root grouplist MuiListItemButton-gutters MuiListItemButton-root grouplist MuiListItemButton-gutters emotion-1"
      role="button"
      style="margin-top: 30px;"
      tabindex="0"
    >
      <div
        class="MuiListItemIcon-root emotion-17"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-18"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root emotion-2"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
        >
          Create a group
        </span>
      </div>
    </div>
  </ul>
</div>
`;
